[BUG] 18179 Reverting the spacing issue

--- a/gui/src/components/App/Styles/PageComponentStyles.scss
+++ b/gui/src/components/App/Styles/PageComponentStyles.scss
@@ -204,7 +204,7 @@ $primary-color: #275362;
 }
 
 .breadcrumbHearder{
-  margin-bottom: -55px;
+  margin-bottom: 0px;
 }
 
 .loaderAnimation {
